--- a/css/photographer.css
+++ b/css/photographer.css
@@ -31,6 +31,10 @@
     justify-content: space-between;
     padding: 35px;
     margin: auto;
+    position: absolute;
+    top: 60px;
+    left: 50px;
+    right: 50px;
 }
 
 .modal header {
@@ -73,4 +77,221 @@ form input {
     height: 68px;
     border: none;
     border-radius: 5px;
+}
+
+.pictures_medias {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 50px;
+    margin-top: 100px;
+    width: auto;
+    margin-right: 100px;
+    margin-left: 100px;
+}
+
+.photographer_name {
+    font-size: 40px;
+    color: #D3573C;
+    margin: 0px;
+}
+
+.photographer_profile {
+    background-color: #FAFAFA;
+    height: 300px;
+    margin: 0 100px;
+    padding: 0px 20px 0px 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.profilePicture {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 0px;
+    overflow-clip-margin: initial;
+}
+
+.photographer_devise {
+    color: #959595;
+    font-size: 11px;
+    margin: 5px 5px 5px 0px;
+}
+
+.photographer_location {
+    color: #901C1C;
+    font-size: 14px;
+    margin: 0px;
+}
+
+.photos {
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+    border-radius: 4px;
+}
+
+.media_infos {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #901C1C;
+    font-size: 20px;
+    margin: 0px;
+
+}
+
+.videos {
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+    border-radius: 4px;
+}
+
+.lightbox {
+    border-radius: 5px;
+    border: 1px solid black;
+    background-color: rgb(255, 255, 255);
+    height: 90%;
+    margin: auto;
+    position: fixed;
+    top: 45px;
+    left: 50px;
+    right: 50px;
+    padding: 25px 0px 0px 0px;
+}
+
+.lightbox_container {
+    overflow: hidden;
+    width: 600px;
+    height: 400px;
+    margin: auto;
+    display: flex;
+}
+
+#lightbox {
+    display: none;
+}
+
+.closeLightbox {
+    position: absolute;
+    top: 25px;
+    right: 15px;
+    cursor: pointer;
+}
+
+.arrow_left {
+    position: absolute;
+    top: 50%;
+    left: 15px;
+    cursor: pointer;
+}
+
+.arrow_right {
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    cursor: pointer;
+}
+
+.media_lightbox {
+    flex: 1 0 100%;
+    position: relative;
+    height: auto;
+}
+
+.photos_lightbox {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+.box {
+    position: fixed;
+    bottom: 0;
+    right: 30px;
+    width: 270px;
+    height: 70PX;
+    background-color: #D3573C;
+    border-radius: 4px 4px 0 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.boxInfos {
+    margin-left: 20px;
+    margin-right: 15px;
+    font-size: 20px;
+}
+
+.boxPrice {
+    position: absolute;
+    right: 20px;
+    bottom: 23px;
+}
+
+.title {
+    flex-grow: 1;
+}
+
+.coeur {
+    margin-left: 10px;
+}
+
+.custom-select {
+    color: white;
+    padding: 7px;
+    border: 1px solid;
+    border-radius: 10px;
+    width: 200px;
+}
+
+.custom-select select {
+    display: none;
+}
+
+.new-select {
+    padding: 7px;
+    background-color: #901C1C;
+    position: relative;
+}
+
+.new-select::after {
+    content: "";
+    position: absolute;
+    right: 5px;
+    border: 6px solid;
+    border-color: #fff transparent transparent transparent;
+    top: 50%;
+    transform: translateY(-25%);
+}
+
+.new-select.active::after {
+    content: "";
+    position: absolute;
+    right: 5px;
+    border: 6px solid;
+    border-color: transparent transparent #fff transparent;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.select-items div {
+    background-color: #901C1C;
+    padding: 7px;
+    border-bottom: 1px solid white;
+    border-bottom-width: 90%;
+    cursor: pointer;
+}
+
+.select-hide {
+    display: none;
 }
