--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ h1 {
     width: 200px;
     object-fit: cover;
     transform: scale(1.2);
+    overflow: visible;
+    overflow-clip-margin: initial;
 }
 
 .container_img {
