--- a/css/photographer.css
+++ b/css/photographer.css
@@ -86,7 +86,7 @@ form input {
     align-items: center;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 50px;
-    margin-top: 100px;
+    margin-top: 70px;
     width: auto;
     margin-right: 100px;
     margin-left: 100px;
@@ -169,8 +169,8 @@ form input {
 
 .lightbox_container {
     overflow: hidden;
-    width: 600px;
-    height: 400px;
+    width: 80%;
+    height: 90%;
     margin: auto;
     display: flex;
 }
@@ -201,15 +201,23 @@ form input {
 }
 
 .media_lightbox {
-    flex: 1 0 100%;
-    position: relative;
-    height: auto;
+    flex: 0 0 auto;
+    width: 100%;
+    max-height: 80vh;
+    margin: 0 10px;
+    overflow: hidden;
+}
+
+.media_lightbox img {
+    width: 80%;
+    /* ajustez cette valeur en fonction de la largeur souhaitée */
+    height: 80%;
 }
 
 .photos_lightbox {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 
 }
 
@@ -244,19 +252,30 @@ form input {
 
 .coeur {
     margin-left: 10px;
+    cursor: pointer;
+}
+
+.sort-container {
+    display: flex;
+    align-items: center;
+    position: relative;
+    justify-content: flex-start;
 }
 
 .custom-select {
     color: white;
     padding: 7px;
-    border: 1px solid;
     border-radius: 10px;
-    width: 200px;
-    margin-left: 2em;
+    width: 150px;
+    margin-left: 1em;
+    position: absolute;
+    left: 10em;
+    top: 0.1em;
 }
 
 .custom-select-title {
-    margin-left: 2em;
+    margin-left: 6.3em;
+    margin-top: 1em;
 }
 
 .custom-select select {
@@ -267,6 +286,7 @@ form input {
     padding: 7px;
     background-color: #901C1C;
     position: relative;
+    height: 30px;
 }
 
 .new-select::after {
@@ -291,9 +311,17 @@ form input {
 
 .select-items div {
     background-color: #901C1C;
-    padding: 7px;
-    border-bottom: 1px solid white;
-    border-bottom-width: 90%;
+    padding: 10px;
+
+}
+
+.custom-select .select-items div::before {
+    content: "";
+    display: block;
+    height: 1px;
+    margin: 0.8em;
+    width: 85%;
+    background-color: white;
     cursor: pointer;
 }
 
