--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,27 +1,166 @@
-#contact_modal {
-    display: none;
+main {
+    position: relative;
+    height: 100%;
+    margin-bottom: 70px;
 }
 
-.photograph-header {
+/* .photograph-header {
     background-color: #FAFAFA;
     height: 300px;
     margin: 0 100px;
-}
+} */
 
-.contact_button {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    padding: 11px;
-    width: 170px;
-    height: 70px;
-    border: none;
-    background-color: #901C1C;
-    border-radius: 5px;
+.fa-heart {
     cursor: pointer;
 }
 
+.hidden {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.contact-modal-section {
+    display: none;
+    position: absolute;
+    justify-content: center;
+    align-items: flex-start;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 900;
+}
+
+.modal-bg {
+    content: " ";
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #000000;
+    opacity: 0.3;
+}
+
 .modal {
+    position: relative;
+    top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 50%;
+    padding: 35px;
+    border-radius: 5px;
+    background-color: #DB8876;
+    animation: apparition-from-top 500ms ease-out forwards;
+}
+
+.close-modal-btn-wrapper {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: fit-content;
+    height: fit-content;
+}
+
+.close-modal-btn {
+    position: relative;
+    margin-top: 15px;
+    cursor: pointer;
+}
+
+.contact__header {
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+    height: fit-content;
+}
+
+.contact__header__title {
+    margin: 0;
+    font-size: 3.56em;
+    font-weight: normal;
+    text-align: left;
+}
+
+.contact-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.fieldset {
+    position: relative;
+    width: 100%;
+    padding: 0;
+    border: none;
+}
+
+.legend {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.form-data {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: self-start;
+}
+
+.form .label {
+    color: #000000;
+    font-size: 2em;
+}
+
+.contact-form__input {
+    width: calc(100% - 36px);
+    height: 68px;
+    border: none;
+    border-radius: 5px;
+    padding: 0 18px;
+    font-size: 1.5em;
+}
+
+.contact-form__input--message-content {
+    height: 200px;
+    max-width: 100%;
+    padding-top: 18px;
+    padding-bottom: 18px;
+}
+
+.error__message {
+    display: none;
+    position: absolute;
+    bottom: 0.4em;
+    right: 0.5em;
+    font-size: 0.8em;
+    color: #e54858;
+    line-height: 0.3;
+    transition: 0.3s;
+}
+
+.contact_button {
+    width: 170px;
+    height: 70px;
+    margin-top: 26px;
+    padding: 11px;
+    background-color: #901C1C;
+    color: #FFFFFF;
+    font-size: 1.1em;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    transition: all 300ms ease-out;
+}
+
+/* .modal {
     border-radius: 5px;
     background-color: #DB8876;
     width: 50%;
@@ -31,25 +170,18 @@
     justify-content: space-between;
     padding: 35px;
     margin: auto;
-    position: absolute;
-    top: 60px;
-    left: 50px;
-    right: 50px;
-}
+} */
 
-.modal header {
-    justify-content: space-between;
-    width: 100%;
-}
 
 .modal header img {
     cursor: pointer;
 }
 
-.modal header h2 {
-    font-size: 64px;
+.contact__header__title {
+    margin: 0;
+    font-size: 3.56em;
     font-weight: normal;
-    text-align: center;
+    text-align: left;
 }
 
 form {
@@ -79,252 +211,399 @@ form input {
     border-radius: 5px;
 }
 
-.pictures_medias {
+.photograph-profile {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 50px;
-    margin-top: 70px;
-    width: auto;
-    margin-right: 100px;
-    margin-left: 100px;
-}
-
-.photographer_name {
-    font-size: 40px;
-    color: #D3573C;
-    margin: 0px;
-}
-
-.photographer_profile {
-    background-color: #FAFAFA;
     height: 300px;
-    margin: 0 100px;
-    padding: 0px 20px 0px 20px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    margin: 0 7%;
+    width: 79%;
+    padding: 0 3.5%;
+    background-color: #FAFAFA;
+    column-gap: 18px;
 }
 
-.profilePicture {
+.image-warpper {
+    position: relative;
     height: 200px;
     width: 200px;
-    border-radius: 50%;
+    border-radius: 100%;
+    overflow: hidden;
+}
+
+.profile-pic {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
-    margin-right: 0px;
-    overflow-clip-margin: initial;
 }
 
-.photographer_devise {
-    color: #959595;
-    font-size: 11px;
-    margin: 5px 5px 5px 0px;
+.info-text {
+    margin: 0;
 }
 
-.photographer_location {
+.info-text--name {
+    font-size: 64px;
+    color: #D3573C;
+    margin: 0;
+}
+
+.info-text--city {
+    font-size: 24px;
     color: #901C1C;
-    font-size: 14px;
-    margin: 0px;
+    margin-bottom: 19px;
 }
 
-.photos {
-    height: 300px;
-    width: 300px;
-    object-fit: cover;
-    border-radius: 4px;
+.info-text--city {
+    font-size: 18px;
 }
 
-.media_infos {
+.sub-info {
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    right: 20px;
+    width: 376px;
+    padding: 15px 20px;
+    background: #DB8876;
+    color: #000000;
+    border-radius: 5px 5px 0 0;
+    z-index: 900;
+    font-size: 24px;
+}
+
+.picture-section {
+    margin: 0 7%;
+    margin-top: 20px;
+}
+
+.filter {
+    position: relative;
+    height: fit-content;
+    display: flex;
+    justify-content: flex-start;
+    column-gap: 25px;
+}
+
+.dropdown-checkbox {
+    display: none;
+}
+
+.filter_by {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: row;
+    height: 69px;
+    font-size: 1em;
+    font-weight: bold;
+}
+
+
+input[type="checkbox" i] {
+    background-color: initial;
+    cursor: default;
+    appearance: auto;
+    box-sizing: border-box;
+    margin: 3px 3px 3px 4px;
+    padding: initial;
+    border: initial;
+}
+
+
+.selector-warpper {
+    position: relative;
+    width: 170px;
+}
+
+.dropdown-menu__button {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 69px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 5px;
+    background: #901C1C;
+    color: #FFFFFF;
+    text-align: left;
+    font-size: 1em;
+    border: none;
+}
+
+.icon-filter {
+    z-index: 100;
+}
+
+.selector {
+    position: absolute;
+    display: none;
+    flex-direction: column-reverse;
+    top: 0;
+    left: 0;
+    margin: 0;
+    width: 170px;
+    padding: 0;
+    border-radius: 5px;
+    overflow: hidden;
+    z-index: 1;
+    animation: dropdown-apparition 500ms forwards;
+    transform-origin: top center;
+}
+
+.option {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: #901C1C;
-    font-size: 20px;
-    margin: 0px;
-
+    width: calc(100% - 40px);
+    height: 69px;
+    padding-left: 20px;
+    padding-right: 20px;
+    background: #901C1C;
+    color: #FFFFFF;
+    font-size: 1em;
+    border: none;
 }
 
-.videos {
-    height: 300px;
-    width: 300px;
-    object-fit: cover;
-    border-radius: 4px;
-}
-
-.lightbox {
-    border-radius: 5px;
-    border: 1px solid black;
-    background-color: rgb(255, 255, 255);
-    height: 90%;
-    margin: auto;
-    position: fixed;
-    top: 45px;
-    left: 50px;
-    right: 50px;
-    padding: 25px 0px 0px 0px;
-}
-
-.lightbox_container {
-    overflow: hidden;
-    width: 80%;
-    height: 90%;
-    margin: auto;
+.option.checked {
     display: flex;
+    order: 1;
 }
 
-#lightbox {
-    display: none;
-}
-
-.closeLightbox {
+.option:not(.checked):after {
+    content: " ";
     position: absolute;
-    top: 25px;
-    right: 15px;
-    cursor: pointer;
+    top: 0;
+    left: 10px;
+    width: 150px;
+    height: 1px;
+    background: #FAFAFA;
 }
 
-.arrow_left {
-    position: absolute;
-    top: 50%;
-    left: 15px;
-    cursor: pointer;
+.container-picture {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 50px;
+    gap: 20px;
 }
 
-.arrow_right {
-    position: absolute;
-    top: 50%;
-    right: 15px;
-    cursor: pointer;
+.card {
+    display: flex;
+    flex-direction: column;
+    height: 350px;
+    width: 350px;
 }
 
-.media_lightbox {
-    flex: 0 0 auto;
+.card_description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 20%;
+    color: #901C1C;
+}
+
+.card__header__title {
+    position: relative;
+    margin: 10px 0;
+    font-size: 1.3em;
+    font-weight: 400;
+}
+
+.slide .card_description {
+    height: fit-content;
+}
+
+.card .image-warpper {
     width: 100%;
-    max-height: 80vh;
-    margin: 0 10px;
-    overflow: hidden;
+    height: 300px;
+    border-radius: 5px;
 }
 
-.media_lightbox img {
-    width: 80%;
-    /* ajustez cette valeur en fonction de la largeur souhaitée */
-    height: 80%;
+.video-element,
+video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
 
-.photos_lightbox {
+.card .image-warpper img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    object-fit: contain;
-
+    object-fit: cover;
 }
 
-.box {
-    position: fixed;
-    bottom: 0;
-    right: 30px;
-    width: 270px;
-    height: 70PX;
-    background-color: #D3573C;
-    border-radius: 4px 4px 0 0;
-    display: flex;
-    flex-direction: row;
+.btn-likes {
+    display: inline-flex;
+    justify-content: space-around;
     align-items: center;
+    column-gap: 10px;
+    font-size: 1.3em;
+    border: none;
+    color: #901C1C;
+    background-color: inherit;
+    z-index: 40;
 }
 
-.boxInfos {
-    margin-left: 20px;
-    margin-right: 15px;
-    font-size: 20px;
-}
-
-.boxPrice {
-    position: absolute;
-    right: 20px;
-    bottom: 23px;
-}
-
-.title {
-    flex-grow: 1;
-}
-
-.coeur {
-    margin-left: 10px;
-    cursor: pointer;
-}
-
-.sort-container {
-    display: flex;
-    align-items: center;
-    position: relative;
-    justify-content: flex-start;
-}
-
-.custom-select {
-    color: white;
-    padding: 7px;
-    border-radius: 10px;
-    width: 150px;
-    margin-left: 1em;
-    position: absolute;
-    left: 10em;
-    top: 0.1em;
-}
-
-.custom-select-title {
-    margin-left: 6.3em;
-    margin-top: 1em;
-}
-
-.custom-select select {
+.carousel-section {
+    content: " ";
     display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #000000;
+    z-index: 999;
 }
 
-.new-select {
-    padding: 7px;
-    background-color: #901C1C;
+.carousel__bg {
+    content: " ";
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: #FFFFFF;
+}
+
+.carousel__content {
     position: relative;
-    height: 30px;
+    display: flex;
+    justify-content: center;
+    height: 88vh;
+    width: 73vw;
 }
 
-.new-select::after {
-    content: "";
-    position: absolute;
-    right: 5px;
-    border: 6px solid;
-    border-color: #fff transparent transparent transparent;
-    top: 50%;
-    transform: translateY(-25%);
+.slide {
+    display: none;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
 }
 
-.new-select.active::after {
-    content: "";
+.card__header {
+    height: fit-content;
+}
+
+.slide .image-warpper {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    border-radius: 0;
+}
+
+.slide img {
     position: absolute;
-    right: 5px;
-    border: 6px solid;
-    border-color: transparent transparent #fff transparent;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.prev,
+.next {
+    position: absolute;
     top: 50%;
     transform: translateY(-50%);
 }
 
-.select-items div {
-    background-color: #901C1C;
-    padding: 10px;
-
-}
-
-.custom-select .select-items div::before {
-    content: "";
-    display: block;
-    height: 1px;
-    margin: 0.8em;
-    width: 85%;
-    background-color: white;
+.prev,
+.next:hover {
     cursor: pointer;
 }
 
-.select-hide {
-    display: none;
+.prev {
+    left: 7%;
+}
+
+.next {
+    right: 7%;
+}
+
+.arrow,
+.cross {
+    color: #901C1C;
+    font-size: 30px;
+}
+
+.close-btn {
+    position: absolute;
+    top: 6%;
+    right: 7%;
+    z-index: 10;
+}
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
+.no-scroll {
+    overflow: hidden;
+}
+
+@media screen and (max-width: 900px) {
+    .photograph-profile {
+        flex-direction: column-reverse;
+        text-align: center;
+        height: fit-content;
+        margin-top: 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        row-gap: 18px;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    .sub-info {
+        width: 100%;
+        right: 0;
+        padding: 15px 0;
+        justify-content: space-around;
+    }
+
+    .modal {
+        width: 100%;
+    }
+}
+
+@keyframes dropdown-apparition {
+    0% {
+        transform: scaleY(0.33);
+    }
+
+    100% {
+        transform: scaleY(1);
+    }
 }
